final start